# dlib-android-app

./: .gitignore  README.md  settings.gradle
all/: build.gradle
all/src/main/: AndroidManifest.xml
all/src/main/cpp/: CMakeLists.txt
all/src/main/cpp/dlib/image_processing/: object_detector.h
all/src/main/cpp/dlib/image_transforms/: interpolation.h
all/src/main/cpp/glog/: logging.h
all/src/main/cpp/jni_common/: jni_bitmap2mat.cpp
all/src/main/cpp/jni_detections/: jni_face_det.cpp  jni_imageutils.cpp  jni_pedestrian_det.cpp
all/src/main/java/com/tzutalin/dlib/: FaceDet.java
all/src/main/java/com/tzutalin/dlibtest/: MainActivity.java  MainActivity_.java  OnGetImageListener.java
all/src/main/res/values/: strings.xml
face-alignment/: CMakeLists.txt  build.gradle
face-alignment/src/main/java/com/seerslab/facelandmarktracking/: MainActivity.java
face-alignment/src/main/jni/: Tracking.cpp  jni_linker.cpp
facedetect/: CMakeLists.txt  build.gradle
facedetect/src/main/: AndroidManifest.xml
facedetect/src/main/java/com/face/landmark/: CameraHandler.java  DlibDemoApp.java  DrawingSurfaceView.java  FaceTracker.java  FileUtils.java  MainActivity.java  PermissionUtils.java  RatioViewGroup.java
facedetect/src/main/java/com/tzutalin/dlibtest/: CameraActivity.java  CameraConnectionFragment.java  FloatingCameraWindow.java  MainActivity.java  MainActivity_.java  OnGetImageListener.java
facedetect/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
facedetect/src/main/jni/: CMakeLists.txt  jni_linker.cpp  mylog.h
facedetect/src/main/jni/alignment/: FaceTracker.cpp  jni_linker.cpp  jni_linker.h
facedetect/src/main/jni/dlib/image_processing/: scan_fhog_pyramid.h
facedetect/src/main/jni/jni_common/: jni_bitmap2mat.h  jni_utils.h  rgb2yuv.h  yuv2rgb.h
facedetect/src/main/jni/jni_detections/: detector.h  jni_face_det.h  jni_imageutils.cpp  jni_imageutils.h  jni_pedestrian_det.h
facedetect/src/main/res/layout/: activity_main.xml
facedetect/src/main/res/values/: dimens.xml  strings.xml  styles.xml
openCVLibrary320/: build.gradle
